# 1DQuantumSim

./: CMakeLists.txt
forms/: mainwindow.ui
include/: mainwindow.h  solver.h
src/: CMakeLists.txt  mainwindow.cpp  solver.cpp
tests/: CMakeLists.txt  testing.cpp
